# pancake-core

./: Cargo.toml  README.md
client/: Cargo.toml  README.md
client/examples/: fuzz_test.rs  runthrough.rs
client/examples/client-runthrough/: Cargo.toml
client/examples/client-runthrough/src/: main.rs
client/src/: errors.rs  lib.rs  partition_helpers.rs  row_helpers.rs  types.rs  utils.rs
client/src/client/: api.rs  mod.rs  read.rs  types.rs
core/: Cargo.toml  README.md
core/src/: deletion.rs  errors.rs  lib.rs  rep_levels.rs
core/src/compression/: q_codec.rs  traits.rs  utils.rs
core/src/encoding/: byte_reader.rs  decoder.rs  encoder.rs  mod.rs
core/src/primitives/: bools.rs  bytess.rs  floats.rs  ints.rs  strings.rs  timestamps.rs
examples/client-runthrough/: Cargo.toml
examples/client-runthrough/src/: main.rs
