[package]
name = "pancake-db-client"
version = "0.1.1"
edition = "2018"

authors = ["PancakeDB <inquiries@pancakedb.com>"]
categories = ["database"]
description = "Rust client library for PancakeDB"
homepage = "https://pancakedb.com"
keywords = ["pancake", "db", "client"]
license = "Apache-2.0"
repository = "https://github.com/pancake-db/pancake-core/"

[dependencies]
hyper = {version="0.14.9", features=["full"]}
pancake-db-core = "0.1.1"
pancake-db-idl = "0.1.0"
protobuf = "=3.0.0-alpha.2"
tokio = {version="1.2.0", features=["macros"]}
uuid = {version="0.8.2", features=["v4"]}

[dev-dependencies]
futures = "0.3.17"
rand = "0.8.4"
structopt = "0.3.25"
tokio = {version="1.2.0", features=["full"]}

[[example]]
name = "runthrough"
path = "examples/runthrough.rs"

[[example]]
name = "fuzz_test"
path = "examples/fuzz_test.rs"

