[package]
name = "pancake-db-client"
version = "0.1.2"
edition = "2018"

authors = ["PancakeDB <inquiries@pancakedb.com>"]
categories = ["database"]
description = "Rust client library for PancakeDB"
homepage = "https://pancakedb.com"
keywords = ["pancake", "db", "client"]
license = "Apache-2.0"
repository = "https://github.com/pancake-db/pancake-core/"

[dependencies]
pancake-db-core = {path="../core"}
pancake-db-idl = {path="../../pancake-idl/temp", features=["service"]}
prost-types = "0.9.0"
tokio = {version="1.2.0", features=["macros"]}
tonic = "0.6.2"
uuid = {version="0.8.2", features=["v4"]}

[dev-dependencies]
futures = "0.3.17"
rand = "0.8.4"
structopt = "0.3.25"
tokio = {version="1.2.0", features=["full"]}
tokio-test = "0.4.2"

[[example]]
name = "runthrough"
path = "examples/runthrough.rs"

[[example]]
name = "fuzz_test"
path = "examples/fuzz_test.rs"

