[package]
name = "pancake-db-core"
version = "0.1.0"
edition = "2018"

authors = ["PancakeDB <inquiries@pancakedb.com>"]
description = "Tools for PancakeDB and its client libraries"
homepage = "https://pancakedb.com"
keywords = ["pancake", "db", "core"]
license = "Apache-2.0"
repository = "https://github.com/pancake-db/pancake-core/"

[dependencies]
pancake-db-idl = "0.1.0"
protobuf = "=3.0.0-alpha.2"
q_compress = "0.7.0"
zstd = "0.9"
