[package]
name = "pancake-db-core"
version = "0.2.0"
edition = "2018"

authors = ["PancakeDB <inquiries@pancakedb.com>"]
description = "Tools for PancakeDB and its client libraries"
homepage = "https://pancakedb.com"
keywords = ["pancake", "db", "core"]
license = "Apache-2.0"
repository = "https://github.com/pancake-db/pancake-core/"

[dependencies]
pancake-db-idl = {path = "../../pancake-idl/rust"}
prost-types = "0.9.0"
q_compress = "0.9.1"
zstd = "0.10"
